--- a/app/views/pages/_hp_sponsors.html.erb
+++ b/app/views/pages/_hp_sponsors.html.erb
@@ -2,29 +2,23 @@
 
 <h1>Sponsors</h1>
 
-<p align="center">We wish to thank our sponsors for their generous support 
-        <br> 
-        in helping us to keep the Dog flying</p> 
-      <table width="100%" border="0"> 
-        <tr> 
-          <td><div align="center"><a href="http://www.championaerospace_sm.com/"><img src="/assets/champion_logo.gif" width="79" height="51" border="0" /></a></div></td> 
-          <td><div align="center"><img src="/assets/concorde_sm.jpg" width="103" height="24" /></div></td>
-          <td><div align="center"><a href="https://www.foreflight.com/"><img src="/assets/foreflight-logo-large.png" width="140" height="45" border="0" /></a></div></td> 
-        </tr> 
-        <tr> 
-          <td><div align="center"><a href="http://www.lightspeedaviation.com"><img src="/assets/LS_Logo_Black_119x18.jpg" width="119" height="18" border="0" /></a></div></td> 
-          <td><div align="center"><a href="http://www.mitchellproducts.com/"><img src="/assets/Mitchell_Logo_sm.gif" width="98" height="25" border="0" /></a></div></td> 
-          <td><div align="center"><a href="http://www.pilotschoice.com"><img src="/assets/pca_logo_sm.gif" width="60" height="50" border="0" /></a></div></td> 
-        </tr> 
-        <tr> 
-          <td><div align="center"><a href="http://www.ps-engineering.com/"><img src="/assets/pse_logo.jpg" width="141" height="38" /></a></div></td> 
-          <td><div align="center"><a href="https://www.swaerospace.com/"><img src="https://devildogsquadron.com/assets/SWAerospace_Logo.png" width="147" height="42" /></a></div></td> 
-          <td><div align="center"><a href="http://www.xmwxweather.com/"><img src="/assets/xm_wx.jpg" width="88" height="40" /></a></div></td> 
-        </tr> 
-        <tr> 
-          <td colspan=3><div align="center"><img src="/assets/abilogo_sm.jpg" width="163" height="32" /></div></td> 
-        </tr> 
-      </table>
+<p align="center">We wish to thank our sponsors for their generous support in helping us to keep the Dog flying</p> 
+
+<div class="row">
+<div class="col-sm-3"><a href="http://www.championaerospace.com/" target="_blank"><img src="uploads/images/champion_weblogo.png" width="100%"/></a></div> 
+<div class="col-sm-3"><a href="http://www.concordebattery.com/" target="_blank"><img src="uploads/images/logo-concorde.png" width="100%" /></a></div>
+<div class="col-sm-3"><a href="https://www.foreflight.com/" target="_blank"><img src="uploads/images/ForeFlight_Logo_in_Black.png" width="100%"/></a></div> 
+
+<div class="col-sm-3"><a href="http://www.lightspeedaviation.com" target="_blank"><img src="uploads/images/Lightspeed_Aviation.png"  width="100%" /></a></div> 
+<div class="col-sm-3"><a href="http://www.mitchellproducts.com/" target="_blank"><img src="uploads/images/mitchell_logo.jpg"  width="100%" /></a></div> 
+<div class="col-sm-3"><a href="http://www.pilotschoice.com" target="_blank"><img src="/assets/pca_logo_sm.gif" width="100%" /></a></div> 
+
+<div class="col-sm-3"><a href="http://www.ps-engineering.com/" target="_blank"><img src="uploads/images/PS_Engineering_05fa5_450x450.png" width="100%" /></a></div> 
+<div class="col-sm-3"><a href="https://www.swaerospace.com/" target="_blank"><img src="https://devildogsquadron.com/assets/SWAerospace_Logo.png" width="100%"  /></a></div> 
+<div class="col-sm-3"><a href="http://www.xmwxweather.com/" target="_blank"><img src="/assets/xm_wx.jpg"  width="100%"  /></a></div> 
+
+<div class="col-sm-3"><img src="/assets/abilogo_sm.jpg"  width="100%" /></div> 
+</div>
 <!-- CLOSE left-column-box CONTAINER -->
 </div>
 
