--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,3 @@
-<div class="menu-link">
-  <%= link_to image_tag("nose_art.png", :alt => "Devil Dog Squadron"), "/" %>
-  <div style="margin-top: 0.75em;"><a href="#nav">menu</a></div>
-</div>
-<div class="logo">
-  <%= link_to image_tag("nose_art.png", :alt => "Devil Dog Squadron"), "/" %>
-</div>
-<div class="header-image hero">
+<div class="header-image">
   <%= image_tag("headers/" + random_image) %>
 </div>
