--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -16,7 +16,13 @@
   <tr>
     <td><%= content.user %></td>
     <td><%= content.title %></td>
-    <td><%= content.body %></td>
+    <td>
+      <% if content.body.length > 220 %>
+        <%= markdown truncate( content.body, :length => 220, :separator => ' ') %> <em><%= link_to "...More", content %></em>
+      <% else %>
+        <%= markdown content.body %>
+      <% end %>
+    </td>
     <td><%= content.slug %></td>
     <td><%= content.published_at %></td>
     <td><%= link_to 'Show', content %></td>
