--- a/app/views/lhfe_riders/index.html.erb
+++ b/app/views/lhfe_riders/index.html.erb
@@ -27,7 +27,7 @@ Number of riders:  <%= @lhfe_riders.count %><br />
 Avg Age:  <%= total_age/index %><br />
 <br />
 
-<table width="500" class="table_border">
+<table class="table_border">
 
 
 <% @lhfe_riders.each do |lhfe_rider| %>
