--- a/app/views/pages/_hp_feed_the_dog.html.erb
+++ b/app/views/pages/_hp_feed_the_dog.html.erb
@@ -1,26 +1,13 @@
-<div class="home-left-box">
+<div class="hp-donations">
 
-<h1>Feed the Dog</h1>
+<h1><%= @donate.title %></h1>
 
-<p>Giving history a future requires support. The Devil Dog Squadron relies on support from personal and business donations to cover the ongoing operating, maintenance and restoration costs.</p>
+<%= markdown @donate.body %>
 
-<div class="ftd_row">
-  <div class="ftd_left_cell">
-    <div align="center">
-    <%= image_tag('dog_bowl.jpg',  :border => 'none') %>
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-      <input type="hidden" name="cmd" value="_s-xclick">
-      <input type="hidden" name="hosted_button_id" value="DFVG4GSRFQUKN">
-      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-      <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-    </form>
-    </div>
-  </div>
-  <div class="ftd_right_cell">
-    <div align="center"> 
-  <%= link_to image_tag('home_tshirt.jpg', :border => 'none'), px_path %>
-  <%= link_to "Visit our PX", px_path %>
-  </div>
-  </div>
-</div>
+<% if signed_in?%>
+    <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin" } %>
+      <%= link_to 'Edit', edit_content_path(@donate) %>
+    <% end %>
+<% end %>
+
 </div>
