--- a/app/views/pages/_hp_sponsors.html.erb
+++ b/app/views/pages/_hp_sponsors.html.erb
@@ -1,24 +1,16 @@
-<div class="home-right-box">
+<div class="hp-sponsors">
 
 <h1>Sponsors</h1>
 
-<p align="center">We wish to thank our sponsors for their generous support in helping us to keep the Dog flying</p> 
+<p align="center">We wish to thank our sponsors for their generous support in helping us to keep the Dog flying.</p> 
 
 <div class="row">
-<div class="col-sm-3"><a href="http://www.championaerospace.com/" target="_blank"><img src="uploads/images/champion_weblogo.png" width="100%"/></a></div> 
-<div class="col-sm-3"><a href="http://www.concordebattery.com/" target="_blank"><img src="uploads/images/logo-concorde.png" width="100%" /></a></div>
-<div class="col-sm-3"><a href="https://www.foreflight.com/" target="_blank"><img src="uploads/images/ForeFlight_Logo_in_Black.png" width="100%"/></a></div> 
-
-<div class="col-sm-3"><a href="http://www.lightspeedaviation.com" target="_blank"><img src="uploads/images/Lightspeed_Aviation.png"  width="100%" /></a></div> 
-<div class="col-sm-3"><a href="http://www.mitchellproducts.com/" target="_blank"><img src="uploads/images/mitchell_logo.jpg"  width="100%" /></a></div> 
-<div class="col-sm-3"><a href="http://www.pilotschoice.com" target="_blank"><img src="/assets/pca_logo_sm.gif" width="100%" /></a></div> 
-
-<div class="col-sm-3"><a href="http://www.ps-engineering.com/" target="_blank"><img src="uploads/images/PS_Engineering_05fa5_450x450.png" width="100%" /></a></div> 
-<div class="col-sm-3"><a href="https://www.swaerospace.com/" target="_blank"><img src="https://devildogsquadron.com/assets/SWAerospace_Logo.png" width="100%"  /></a></div> 
-<div class="col-sm-3"><a href="http://www.xmwxweather.com/" target="_blank"><img src="/assets/xm_wx.jpg"  width="100%"  /></a></div> 
-
-<div class="col-sm-3"><img src="/assets/abilogo_sm.jpg"  width="100%" /></div> 
+  <% @sponsors.each do |sponsor| %>
+    <div class="col-sm-3 sponsor-logo">
+      <%= link_to (image_tag '/uploads/images/' + sponsor.logo), sponsor.url, :target => '_blank' %>
+    </div> 
+  <% end %>
 </div>
-<!-- CLOSE left-column-box CONTAINER -->
+
 </div>
 
