--- a/app/views/terms/index.html.erb
+++ b/app/views/terms/index.html.erb
@@ -15,20 +15,18 @@ See <%= link_to "Officer Positions and descriptions", officer_positions_path %> 
 <% end %>
 
 <% last_position = "" %>
-<h1>Officer Positions/Terms</h1>
+<h1>Squadron Officer Positions/Terms</h1>
 
-
-
-<br />
+<p><%= link_to 'Click for a list of position summaries.', officer_positions_path %></p>
 
 <h2>Current Office Holders</h2>
 
-<table width="500" class="table_border">
+<table class="table_border">
     <tr> 
         <th>Position</th>
         <th>Office Holder</th>
-        <th>term_start</th>
-        <th>term_end</th>
+        <th>Term Start</th>
+        <th>Term End</th>
     </tr>
    <%# @officer_positions.each do |term| %>
     <% @terms.each do |term| %>
