--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -357,12 +357,12 @@ input[type="submit"] {
   }
 
 .calendar_month-ii.large {
-  font-size: 2em;
+  font-size: 1.9em;
 }
 
 .calendar_day-ii {
   text-align: center;
-  font-size: 14px;
+  font-size: 1em;
   font-weight: bold;
   margin: 0 0 0 0;
   padding: 0.25em 0 0;
@@ -380,7 +380,7 @@ input[type="submit"] {
   }
 
 .calendar_date-ii.large {
-  font-size: 4em;
+  font-size: 3.5em;
   margin: 0.25em 0 0 0;
 }
 
@@ -399,6 +399,10 @@ input[type="submit"] {
   -webkit-box-shadow: 0px 0px 0px 3px rgba(0,145,64,1);
   -moz-box-shadow: 0px 0px 0px 3px rgba(0,145,64,1);
   box-shadow: 0px 0px 0px 3px rgba(0,145,64,1);
+}
+
+.event-graphic, .map-image img {
+  width: 100%;
 }
 
 /*----------------------------------------------------
