--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -26,89 +26,80 @@
     </div>
   <% end %>
 
-<div class="indent_row">
-  <div class="cell">
-    <div class="field">
-      <%= f.label :start %><br />
-      <%= f.text_field :start, :value => f.object.try(:start).try(:strftime,'%Y-%m-%d %H:%M:%S'), :size => 20 %>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="field">
-      <%= f.label :end %><br />
-      <%= f.text_field :end, :value => f.object.try(:end).try(:strftime,'%Y-%m-%d %H:%M:%S'), :size => 20 %>
-    </div>
-  </div>
-  <p class="form_note">Times aren't displayed so not really important to be accurate.</p>
-</div>
-
-
-<div class="indent_row" style="width: 560px;">
-  <div class="cell">
-    <div class="field">
-      <%= f.label :event_types_id, "Event Type" %><br />
-      <%= f.collection_select :event_type_id, EventType.all, :id, :title, options = {:order => 'title ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="field">
-      <%= f.label :event_statuses_id, "Status" %> <a href="#" title="Only confirmed will show to general public, tentative will show to logged in members">tip</a><br />
-      <%= f.collection_select :event_statuses_id, EventStatus.all, :id, :status, options = {:order => 'status ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="field">
-      <%= f.label :location %><br />
-      <%= f.collection_select :location_id, Location.ordered.all, :id, :short_name, options = {:order => 'short_name ASC', :prompt => true}, html_options = {:class => "styled-select"} %><br />
-      <p><%= link_to 'Enter a new location', new_location_path %></p><br />
-    </div>
-  </div>
-      <div style="clear: both;"><%= f.check_box :rsvp %>Create RSVP list for this event (check for yes)</div>
-      <div style="clear: both;"><%= f.check_box :flight_roster %>Create flight roster for this event i.e. flight crew (check for yes)</div>
-      <div style="clear: both;"><%= f.check_box :rides_available %>LHFE Rides Available at this event (check for yes)</div>
-</div>
-
-<div class="indent_row">
-  <div class="field">
+<div class="row">
+  <div class="field col-sm-4">
     <%= f.label :title, "Event Name" %><br />
     <%= f.text_field :title, :size => "20" %>
   </div>
-  <div class="field">
-    <%= f.label :entered_by %><br />
-    <%= f.text_field :entered_by, :size => "20"  %>
+  <div class="field col-sm-4">
+    <%= f.label :URL, "Event Website URL" %><br />
+    <%= f.text_field :URL, :class => 'boxsizingBorder'  %>
   </div>
+  <div class="field col-sm-4">
+    <%= f.label :location %><br />
+    <%= f.collection_select :location_id, Location.ordered.all, :id, :short_name, options = {:order => 'short_name ASC', :prompt => true}, html_options = {:class => "styled-select"} %><br />
+    <p><%= link_to 'Enter a new location', new_location_path %></p><br />
   </div>
-  <div class="cell">
+</div>
 
+<div class="row">
+<p class="form_note">Times aren't displayed so not really important to be accurate.</p>
+  <div class="field col-sm-4">
+    <%= f.label :start %><br />
+    <%= f.text_field :start, :value => f.object.try(:start).try(:strftime,'%Y-%m-%d %H:%M:%S'), :size => 20 %>
+  </div>
+  <div class="field col-sm-4">
+    <%= f.label :end %><br />
+    <%= f.text_field :end, :value => f.object.try(:end).try(:strftime,'%Y-%m-%d %H:%M:%S'), :size => 20 %>
+  </div>
+  <div class="field col-sm-4">
+    <%= f.label :event_statuses_id, "Status" %> <a href="#" title="Only confirmed will show to general public, tentative will show to logged in members">tip</a><br />
+    <%= f.collection_select :event_statuses_id, EventStatus.all, :id, :status, options = {:order => 'status ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
+  </div>
+</div>
 
-
-  <div class="field">
-    <%= f.label :contact_info %><br />
+<div class="row">
+  <div class="field col-sm-4">
+    <%= f.label :contact_info, 'Event Contact' %><br />
     <%= f.text_field :contact_info, :size => "20"  %>
   </div>
-  <div class="field">
-    <%= f.label :URL, "Event Website URL" %><br />
-    <%= f.text_field :URL, :size => "25"  %>
-  </div>
-  </div>
-  <div class="cell">
-    <div class="field">
+  <div class="field col-sm-4">
     <%= f.label :graphic_address, "Graphic Filename" %><br />
     <%= f.text_field :graphic_address, :size => "20" %>
   </div>
+  <div class="field col-sm-4">
+    <%= f.label :event_types_id, "Event Type" %><br />
+    <%= f.collection_select :event_type_id, EventType.all, :id, :title, options = {:order => 'title ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
   </div>
 </div>
-<div class="clearer"></div>
 
-<div class="indent_row">
-  <div class="cell">
-  <div class="field">
-    <%= f.label :details %><br />
-    <%= f.text_area :details, :size => "50x5" %>
-  </div>
+
+
+
+<div class="row">
+
+
+
+    <div><%= f.check_box :rsvp %>Create RSVP list for this event (check for yes)</div>
+    <div><%= f.check_box :flight_roster %>Create flight roster for this event i.e. flight crew (check for yes)</div>
+    <div><%= f.check_box :rides_available %>LHFE Rides Available at this event (check for yes)</div>
+</div>
+
+<div class="row">
+  <div class="field col-sm-4">
+    <%= f.label :entered_by %><br />
+    <%= f.text_field :entered_by, :size => "20"  %>
   </div>
 </div>
-<div class="clearer"></div>
+
+
+<div class="row">
+  <div class="field col-sm-12">
+    <%= f.label :details %><br />
+    <%= f.text_area :details, :rows => 5, :class => 'boxsizingBorder'  %>
+  </div>
+</div>
+
 
   <div class="actions">
     <%= f.submit :data => { :disable_with => "Submitting..." } %>
