--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -2,7 +2,9 @@
 
 <%= render 'form' %>
 
-<div align="right"><%= button_to 'Delete Event', @event, :confirm => 'Are you sure?', :method => :delete %></div>
+<div align="right">
+  <%= button_to 'Delete Event', @event, :confirm => 'Are you sure?', :method => :delete %>
+</div>
 
 <%= link_to 'Show', @event %> |
 <%= link_to 'Back', events_path %><br />
