--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,8 +1,12 @@
 <% email_addresses = "" %>
-<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyA2CUo-V9LEi2YuJvh6F_Sf7NkmpXnC4yE"
-      type="text/javascript"></script>
 
-<% map_url = "http://maps.googleapis.com/maps/api/staticmap?zoom=8&size=275x190&maptype=roadmap&markers=color:red%7Clabel:X%7C"+@event.location.latitude+","+@event.location.longitude+"&sensor=false" %>
+
+<%# map_url = "     //maps.googleapis.com/maps/api/staticmap?zoom=8&size=275x190&maptype=roadmap&markers=color:red%7Clabel:X%7C"+@event.location.latitude+","+@event.location.longitude+"&sensor=false" %>
+<% map_url = "https://maps.googleapis.com/maps/api/staticmap?center="+@event.location.latitude+","+@event.location.longitude+"&zoom=11&size=400x400&maptype=roadmap
+&markers=color:red%7Clabel:1%7C"+@event.location.latitude+","+@event.location.longitude+"&key=AIzaSyB7VXiMl6JcYSuuF6XreGXm9Wge3IssPO4" %>
+
+<%# "&key=AIzaSyB7VXiMl6JcYSuuF6XreGXm9Wge3IssPO4 %>
+
 <% content_for :sidebar do %>
   <%= render "sidebars/newsletter_signup" %>
 <% end %>
@@ -16,6 +20,9 @@
 <div class="row">
   <div class="col-sm-7">
     <h1><%= @event.title %></h1>
+  <% if @event.graphic_address? %>
+    <div class="event_graphic"><%= image_tag '/uploads/misc_images/' +@event.graphic_address, :class => 'event-graphic'  %></div>
+  <% end %>
   </div>
   <% if @event.start.strftime("%b %d" ) == @event.end.strftime("%b %d") %>
   <div class="col-sm-5">
@@ -67,6 +74,7 @@
     </div>
   </div>
 <% end %>
+</div>
 </div>
 
 <div class="row">
@@ -123,16 +131,19 @@
     <% end %>
   </div>
   <div class="col-sm-5">
-  <% if @event.graphic_address? %>
-    <div class="event_graphic"><%= image_tag(@event.graphic_address) %></div>
-  <% end %>
-
   <% if @event.location.latitude? %>
-    <%= link_to image_tag(map_url), "http://maps.google.com/maps?q="+@event.location.latitude+",+"+@event.location.longitude, :target => "_blank" %>
+    <div class="map-image">
+    <%= link_to image_tag(map_url.html_safe), raw("https://www.google.com/maps/place/" + @event.location.latitude + ' ' + @event.location.longitude + "/@" + @event.location.latitude + "," + @event.location.longitude + ",13z/"), :target => "_blank" %>
+                                                   
+    </div>
+
+
+
+
   <% end %>
   </div>
 </div>
-<div style="clear: both;"></div>
+
 <hr />
 
 <% if @event.flight_roster == true  %>
