--- a/app/views/squadron_documents/show.html.erb
+++ b/app/views/squadron_documents/show.html.erb
@@ -10,7 +10,7 @@
 
 <p>
   <b>Description:</b>
-  <%= @squadron_document.description %>
+  <%= markdown @squadron_document.description %>
 </p>
 
 <p>
